# registry_dashboard

./: Dockerfile  README.md  main.py  pyproject.toml  todo.txt
app/: main.py  utils.py
app/routes/: delete.py  health.py
app/templates/: index.html
src/registry_dashboard/: __init__.py
templates/: index.html
